@@ -707,15 +707,17 @@ abstract class ApiBase {
 								? $paramSettings[self::PARAM_RANGE_ENFORCE] : false;
 
 						if ( !is_null( $min ) || !is_null( $max ) ) {
-						    if ( is_array( $value ) ) {
-							    $value = array_map( 'intval', $value );
-							    foreach ( $value as &$v ) {
+							if ( is_array( $value ) ) {
+								$value = array_map( 'intval', $value );
+								foreach ( $value as &$v ) {
 									$this->validateLimit( $paramName, $v, $min, $max, null, $enforceLimits );
 								}
-						    } else {
-							    $value = intval( $value );
-							    $this->validateLimit( $paramName, $value, $min, $max, null, $enforceLimits );
-						    }
+							} else {
+								$value = intval( $value );
+								$this->validateLimit( $paramName, $value, $min, $max, null, $enforceLimits );
+							}
+						} else {
+							$value = intval( $value );
 						}
 						break;
 					case 'limit':
